--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chokidar": "^1.4.2",
     "md5": "^2.0.0",
+    "rsync": "^0.4.0",
     "scp": "0.0.3",
     "scp2": "^0.2.2",
     "yargs": "^3.31.0"
